# textual-prusa-connect

./: README.md  app.py  css.tcss  pyproject.toml  server.py  t.py  test_api.py
textual_prusa_connect/: app_widgets.py  config.py  connect_api.py  messages.py  models.py  utils.py  widgets.py
textual_prusa_connect/widgets/: __init__.py  dashboard.py  file.py  tool.py
