[tool.poetry]
name = "textual-prusa-connect"
version = "0.1.0"
description = ""
authors = ["Charles Vaillancourt <charles.vaillancourt@corp.ovh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.8.2"
rich = "^13.7.1"
textual = "^0.78.0"
pydantic-settings = "^2.4.0"
textual-dev = "^1.5.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
